<resources>
    <string name="app_name">优软科技</string>

    <string name="find_no_result">没有找到相应的资源</string>
    <string name="loading">正在加载</string>
    <string name="no_more_data">已经没有更多数据了</string>
    <string name="bbs">暴风Bbs</string>

    <string name="input_phone_num">请输入手机号</string>
    <string name="input_pass_word">请输入密码</string>
    <string name="ver_code">验证码</string>
    <string name="get_ver_code">获取</string>
    <string name="input_new_pwd">请输入新密码(6-16位)</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="read_agreement">我已阅读并同意</string>
    <string name="ajb_agreement">《乐视协议》</string>
    <string name="register_now">注册</string>
    <string name="get_ver_code_again">%s秒后重新获取</string>
    <string name="register_new_user">注册新用户</string>
    <string name="btn_login">登录</string>
    <string name="transition_name">transition_01</string>
    <string name="get_again">重新获取</string>
    <string name="shop">商城</string>
    <string name="watch_history">观看记录</string>
    <string-array name="tabs">
        <item>首页</item>
        <item>商城</item>
        <item>会员</item>
        <item>论坛</item>
        <item>我的</item>
    </string-array>

    <string-array name="tab_titles">
        <item>精选</item>
        <item>电视剧</item>
        <item>电影</item>
        <item>综艺</item>
        <item>动漫</item>
        <item>资讯</item>
        <item>音乐</item>
        <item>微电影</item>
    </string-array>
</resources>
